### feat(Compose): Add an example dashboard for HTTP access statistics (HEAD -> feat/observability)
>Thu, 6 Jun 2024 11:28:43 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)




### feat(Python): activate uvicorn logging export using open-telemetry
>Thu, 6 Jun 2024 10:28:26 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)




### feat(Compose): Add observability stack (origin/feat/observability)
>Tue, 4 Jun 2024 18:31:27 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)

Add an observability configuration using Open Telemetry + Grafana to monitor application traces and logs



### feat(Compose): add a minimal compose configuration
>Tue, 4 Jun 2024 16:18:56 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)




### fix(Docker): fix and document dev docker build
>Tue, 4 Jun 2024 16:16:53 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)




### Added Slack support for contacting the administrator
>Mon, 3 Jun 2024 15:33:53 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix dockerfile
>Fri, 31 May 2024 09:19:48 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add "Enter" event to seach on a body Add information about formulas
>Thu, 30 May 2024 14:18:21 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### feat(GML): Added 2273 GML files, generated from 'result.wkts', using ApacheSIS.
>Thu, 30 May 2024 12:01:14 +0200

>Author: emuller (emuller@geomatys.com)
