@@ -1,0 +1,11 @@
+<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=5,IE=9" ><![endif]-->
+<!DOCTYPE html>
+<html>
+<head>
+<title>telemetry</title>
+<meta charset="utf-8"/>
+</head>
+<body><div class="mxgraph" style="max-width:100%;border:1px solid transparent;" data-mxgraph="{&quot;highlight&quot;:&quot;#0000ff&quot;,&quot;nav&quot;:true,&quot;resize&quot;:true,&quot;toolbar&quot;:&quot;zoom layers tags lightbox&quot;,&quot;edit&quot;:&quot;_blank&quot;,&quot;xml&quot;:&quot;&lt;mxfile host=\&quot;app.diagrams.net\&quot; modified=\&quot;2024-06-06T12:35:58.661Z\&quot; agent=\&quot;Mozilla/5.0 (X11; Linux x86_64; rv:126.0) Gecko/20100101 Firefox/126.0\&quot; etag=\&quot;L9QS24XIHWNyIEp_rQnL\&quot; version=\&quot;22.1.21\&quot; type=\&quot;google\&quot;&gt;\n  &lt;diagram name=\&quot;Page-1\&quot; id=\&quot;4ZFYs-6NWxwHXjx6Esuq\&quot;&gt;\n    &lt;mxGraphModel dx=\&quot;1195\&quot; dy=\&quot;661\&quot; grid=\&quot;1\&quot; gridSize=\&quot;10\&quot; guides=\&quot;1\&quot; tooltips=\&quot;1\&quot; connect=\&quot;1\&quot; arrows=\&quot;1\&quot; fold=\&quot;1\&quot; page=\&quot;1\&quot; pageScale=\&quot;1\&quot; pageWidth=\&quot;850\&quot; pageHeight=\&quot;1100\&quot; math=\&quot;0\&quot; shadow=\&quot;0\&quot;&gt;\n      &lt;root&gt;\n        &lt;mxCell id=\&quot;0\&quot; /&gt;\n        &lt;mxCell id=\&quot;1\&quot; parent=\&quot;0\&quot; /&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-26\&quot; value=\&quot;Store\&quot; style=\&quot;rounded=1;whiteSpace=wrap;html=1;fillColor=none;dashed=1;strokeWidth=2;perimeterSpacing=2;verticalAlign=top;fontStyle=1;fontSize=13;labelBackgroundColor=none;\&quot; vertex=\&quot;1\&quot; parent=\&quot;1\&quot;&gt;\n          &lt;mxGeometry x=\&quot;160\&quot; y=\&quot;620\&quot; width=\&quot;400\&quot; height=\&quot;180\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-18\&quot; value=\&quot;Transform\&quot; style=\&quot;rounded=1;whiteSpace=wrap;html=1;fillColor=none;dashed=1;strokeWidth=2;perimeterSpacing=2;verticalAlign=top;fontStyle=1;fontSize=13;labelBackgroundColor=none;\&quot; vertex=\&quot;1\&quot; parent=\&quot;1\&quot;&gt;\n          &lt;mxGeometry x=\&quot;160\&quot; y=\&quot;340\&quot; width=\&quot;400\&quot; height=\&quot;180\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-20\&quot; style=\&quot;edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;exitX=1;exitY=0.5;exitDx=0;exitDy=0;entryX=0;entryY=0.5;entryDx=0;entryDy=0;startArrow=classic;startFill=1;fontStyle=1;fontSize=13;labelBackgroundColor=none;\&quot; edge=\&quot;1\&quot; parent=\&quot;1\&quot; source=\&quot;7H3qwustJVtsp4QrSf4A-1\&quot; target=\&quot;7H3qwustJVtsp4QrSf4A-5\&quot;&gt;\n          &lt;mxGeometry relative=\&quot;1\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-21\&quot; value=\&quot;Geolocation\&quot; style=\&quot;edgeLabel;html=1;align=center;verticalAlign=middle;resizable=0;points=[];fontStyle=1;fontSize=13;labelBackgroundColor=none;\&quot; vertex=\&quot;1\&quot; connectable=\&quot;0\&quot; parent=\&quot;7H3qwustJVtsp4QrSf4A-20\&quot;&gt;\n          &lt;mxGeometry x=\&quot;-0.1725\&quot; y=\&quot;-1\&quot; relative=\&quot;1\&quot; as=\&quot;geometry\&quot;&gt;\n            &lt;mxPoint y=\&quot;9\&quot; as=\&quot;offset\&quot; /&gt;\n          &lt;/mxGeometry&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-5\&quot; value=\&quot;GeoIP database\&quot; style=\&quot;shape=image;verticalLabelPosition=bottom;labelBackgroundColor=none;verticalAlign=top;aspect=fixed;imageAspect=0;image=data:image/svg+xml,PHN2ZyB4bWw6c3BhY2U9InByZXNlcnZlIiB2aWV3Qm94PSIwIDAgNDAwLjY3NCA0MDAuNjc0IiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiBpZD0iQ2FwYV8xIiB2ZXJzaW9uPSIxLjEiIHdpZHRoPSI4MDBweCIgaGVpZ2h0PSI4MDBweCIgZmlsbD0iIzAwMDAwMCI+JiN4YTs8Zz4mI3hhOwk8cGF0aCBkPSJNMzM2LjkxLDczLjU4NmMtMzUuOTg2LTM1LjUyLTgzLjY1My01NS4wODItMTM0LjIxOC01NS4wODJjLTAuNTE4LDAtMS4wMzYsMC4wMS0xLjUyMiwwLjAyJiN4QTsmIzk7JiM5O2MtMTcuNjIxLDAuMTIxLTM1LjA0MiwyLjY2NC01MS44NjMsNy41NTFjLTAuNjE4LTAuNjYxLTEuMjM2LTEuMzIyLTEuODc4LTEuOTY0QzEzMS44OCw4LjU2MywxMTEuMjA4LDAsODkuMjIsMCYjeEE7JiM5OyYjOTtTNDYuNTYsOC41NjMsMzEuMDExLDI0LjExMUMxNy4xNjIsMzcuOTYsOC42ODksNTYuMzQsNy4xNTQsNzUuODY2Yy0xLjUzNiwxOS41MjUsMy45NiwzOS4wMDQsMTUuNDc0LDU0Ljg0OGwzLjczOCw1LjE0NCYjeEE7JiM5OyYjOTtjLTkuNzk0LDIzLjM2Mi0xNC43NjQsNDguMTQtMTQuNzY0LDczLjcyNmMwLDUxLjUxNywyMC4xOTMsOTkuODE5LDU2Ljg2MiwxMzYuMDA4YzM1Ljk5NiwzNS41Miw4My42NjYsNTUuMDgyLDEzNC4yMjgsNTUuMDgyJiN4QTsmIzk7JiM5O2M1MC41NjUsMCw5OC4yMzEtMTkuNTYyLDEzNC4yMTgtNTUuMDgyYzM2LjY2OC0zNi4xODksNTYuODYyLTg0LjQ5MSw1Ni44NjItMTM2LjAwOCYjeEE7JiM5OyYjOTtDMzkzLjc3MiwxNTguMDYzLDM3My41NzgsMTA5Ljc2NSwzMzYuOTEsNzMuNTg2eiBNMTk1LjE4OSwzODUuMjA3Yy0zMC4wOTQtMy42MDItNTguMDYzLTI4LjcxOS03Ni42NDYtNjkuMDMzJiN4QTsmIzk7JiM5O2MyMy4zODktMTIuNzU4LDQ5LjQ4MS0yMC4wNCw3Ni42NDYtMjEuMTc0VjM4NS4yMDd6IE0yMTAuMTg5LDI5NS4wMDFjMjcuMTY1LDEuMTM0LDUzLjI1OCw4LjQxOCw3Ni42NTEsMjEuMTc4JiN4QTsmIzk7JiM5O2MtMTguNTkyLDQwLjMxMi00Ni41NjMsNjUuNDI4LTc2LjY1MSw2OS4wMjlWMjk1LjAwMXogTTIxMC4xODksMjc5Ljk5MnYtNjIuOTA3aDk4LjM3Yy0wLjc3MiwzMC4zMTUtNi4yMjUsNTkuNDQ4LTE1LjkxMiw4NS4xNyYjeEE7JiM5OyYjOTtDMjY3LjQyOSwyODguNzY2LDIzOS4zNzEsMjgxLjExNCwyMTAuMTg5LDI3OS45OTJ6IE0yMTAuMTg5LDIwMi4wODV2LTYyLjkwM2MyOC44NzgtMS4xMzEsNTcuMDc2LTguNzc4LDgyLjQzMy0yMi4zMjYmI3hBOyYjOTsmIzk7YzkuNzAzLDI1LjczNiwxNS4xNjUsNTQuODkyLDE1LjkzNyw4NS4yMjlIMjEwLjE4OXogTTIxMC4xODksMzMuOTc1YzMwLjA1LDMuNjAyLDU4LjAzOCwyOC42OTksNzYuNjMyLDY4Ljk4MyYjeEE7JiM5OyYjOTtjLTIzLjUxNCwxMi44MTMtNDkuNzQ2LDIwLjA2NS03Ni42MzIsMjEuMjA3VjMzLjk3NXogTTI5OS43NDksOTUuMTY5Yy05Ljg0Ny0yMC44OTYtMjIuMTYyLTM4LjA4Mi0zNi4wOTUtNTAuODUmI3hBOyYjOTsmIzk7YzIwLjg2Miw3LjY4NSw0MC4xOTYsMTkuMzQ0LDU3LjA0OSwzNC41OTRDMzE0LjEyMyw4NC44NiwzMDcuMTE1LDkwLjI5NywyOTkuNzQ5LDk1LjE2OXogTTE3MS4yODUsNzUuODY2JiN4QTsmIzk7JiM5O2MtMC44MTMtMTAuMzQ3LTMuNTkzLTIwLjM2My04LjA3LTI5LjU2M2MxMC4yMzctNi45MjIsMjAuOTQxLTExLjA1MiwzMS45NzQtMTIuMzQ1djkwLjIxMWMtMTEuMDQ3LTAuNDYzLTIxLjk3NC0xLjk2LTMyLjY2MS00LjQ1MyYjeEE7JiM5OyYjOTtDMTY5LjM5LDEwNi4yNTgsMTcyLjQ4MSw5MS4wOCwxNzEuMjg1LDc1Ljg2NnogTTE1NC4wNzksMTMzLjA5N2MxMy4zOTUsMy41MTQsMjcuMTcyLDUuNTU5LDQxLjExMSw2LjA5N3Y2Mi44OWgtOTEuMjQ3JiN4QTsmIzk7JiM5O0wxNTQuMDc5LDEzMy4wOTd6IE0xOTUuMTg5LDIxNy4wODV2NjIuOTA3Yy0yOS4xODEsMS4xMjEtNTcuMjM3LDguNzcxLTgyLjQ1MSwyMi4yNTdjLTkuNjg4LTI1LjcyLTE1LjE0Mi01NC44NTMtMTUuOTEzLTg1LjE2NCYjeEE7JiM5OyYjOTtIMTk1LjE4OXogTTEwNS42MTYsMzIzLjk1NmM5Ljg0NSwyMC45MTYsMjIuMTYzLDM4LjEyMSwzNi4xMDUsNTAuODk5Yy0yMC44NjMtNy42ODctNDAuMjAxLTE5LjM0OC01Ny4wNTctMzQuNiYjeEE7JiM5OyYjOTtDOTEuMjg1LDMzNC4yNjIsOTguMjg1LDMyOC44MTcsMTA1LjYxNiwzMjMuOTU2eiBNMjk5Ljc2OCwzMjMuOTYxYzcuMzI4LDQuODYsMTQuMzI3LDEwLjMwMiwyMC45NDcsMTYuMjkyJiN4QTsmIzk7JiM5O2MtMTYuODUzLDE1LjI1NC0zNi4xOSwyNi45MTctNTcuMDU0LDM0LjYwNEMyNzcuNjAxLDM2Mi4wNzksMjg5LjkyLDM0NC44NzQsMjk5Ljc2OCwzMjMuOTYxeiBNMzA1Ljc3MywzMDkuOTc2JiN4QTsmIzk7JiM5O2MxMC44OTYtMjcuOTg0LDE2Ljk5Mi01OS44MjUsMTcuNzk0LTkyLjg5MWg1NS4wMzhjLTEuNzU1LDQyLjIzOS0xOC4zMDYsODEuNzQ1LTQ3LjE4OCwxMTIuNjMxJiN4QTsmIzk7JiM5O0MzMjMuMzY3LDMyMi4zNjUsMzE0Ljc5LDMxNS43NzQsMzA1Ljc3MywzMDkuOTc2eiBNMzc4LjYwNSwyMDIuMDg1aC01NS4wMzhjLTAuODAyLTMzLjA3Ni02LjkwMy02NC45MjctMTcuODA3LTkyLjkxOCYjeEE7JiM5OyYjOTtjOS4wNy01LjgxNSwxNy42NTQtMTIuNDIxLDI1LjY1MS0xOS43MTRDMzYwLjI5OCwxMjAuMzMyLDM3Ni44NTEsMTU5LjgzOSwzNzguNjA1LDIwMi4wODV6IE00MS42MTgsMzQuNzE3JiN4QTsmIzk7JiM5O0M1NC43NDEsMjEuNTkzLDcxLjk4MSwxNS4wMzIsODkuMjIsMTUuMDMyczM0LjQ3OSw2LjU2Miw0Ny42MDIsMTkuNjg2YzIzLjU2MSwyMy41NjEsMjYuNDQzLDYwLjIyNCw2Ljg1NCw4Ny4xNzhMODkuMjIsMTk2LjgyOCYjeEE7JiM5OyYjOTtsLTU0LjQ1Ny03NC45MzJDMTUuMTc1LDk0Ljk0MSwxOC4wNTgsNTguMjc4LDQxLjYxOCwzNC43MTd6IE03NC40OTcsMjAyLjA4NUgyNi43NzJjMC43MzktMTcuODE5LDQuMTEtMzUuMTcxLDEwLjA3Ni01MS44MDUmI3hBOyYjOTsmIzk7TDc0LjQ5NywyMDIuMDg1eiBNMjYuNzcsMjE3LjA4NWg1NS4wNDdjMC44MDIsMzMuMDY0LDYuOSw2NC45MDQsMTcuNzk1LDkyLjg4NmMtOS4wMiw1LjgtMTcuNiwxMi4zOTUtMjUuNjUyLDE5Ljc0OSYjeEE7JiM5OyYjOTtDNDUuMDc1LDI5OC44MzQsMjguNTI0LDI1OS4zMjYsMjYuNzcsMjE3LjA4NXoiLz4mI3hhOwk8cGF0aCBkPSJNODkuMjIsMTMxLjUyM2MyNy4xMzEsMCw0OS4yMDQtMjIuMDczLDQ5LjIwNC00OS4yMDVTMTE2LjM1MSwzMy4xMTUsODkuMjIsMzMuMTE1Yy02Ljg0NCwwLTEzLjQ3MSwxLjM4LTE5LjY5Nyw0LjEwMyYjeEE7JiM5OyYjOTtjLTMuNzk1LDEuNjYtNS41MjYsNi4wODItMy44NjcsOS44NzdjMS42NiwzLjc5NCw2LjA4Miw1LjUyNSw5Ljg3NywzLjg2N2M0LjMxOS0xLjg4OSw4LjkyNS0yLjg0NywxMy42ODgtMi44NDcmI3hBOyYjOTsmIzk7YzE4Ljg2LDAsMzQuMjA0LDE1LjM0NCwzNC4yMDQsMzQuMjA0cy0xNS4zNDQsMzQuMjA1LTM0LjIwNCwzNC4yMDVzLTM0LjIwNS0xNS4zNDQtMzQuMjA1LTM0LjIwNWMwLTQuMTQyLTMuMzU3LTcuNS03LjUtNy41JiN4QTsmIzk7JiM5O3MtNy41LDMuMzU4LTcuNSw3LjVDNDAuMDE1LDEwOS40NSw2Mi4wODgsMTMxLjUyMyw4OS4yMiwxMzEuNTIzeiIvPiYjeGE7CTxwYXRoIGQ9Ik00OC42ODksNjMuMzg2YzIuNTM5LDYuMTMzLDExLjUzMSw1Ljk4OSwxMy45MTgtMC4xN2MyLjUyOS02LjUyNy00Ljg2OC0xMi42OTYtMTAuODQxLTkuMTI1JiN4QTsmIzk7JiM5O0M0OC41OTgsNTUuOTg1LDQ3LjMyNiw1OS45NzQsNDguNjg5LDYzLjM4NkM0OC44OCw2My44NDYsNDguNTEsNjIuOTM2LDQ4LjY4OSw2My4zODZ6Ii8+JiN4YTs8L2c+JiN4YTs8L3N2Zz4=;fontStyle=1;fontSize=13;\&quot; vertex=\&quot;1\&quot; parent=\&quot;1\&quot;&gt;\n          &lt;mxGeometry x=\&quot;440\&quot; y=\&quot;382.5\&quot; width=\&quot;75\&quot; height=\&quot;75\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-27\&quot; value=\&quot;Telemetry data\&quot; style=\&quot;edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;exitX=0.5;exitY=1;exitDx=0;exitDy=0;entryX=0.5;entryY=0;entryDx=0;entryDy=0;fontStyle=1;fontSize=13;labelBackgroundColor=none;horizontal=0;verticalAlign=bottom;strokeWidth=4;endArrow=block;endFill=1;\&quot; edge=\&quot;1\&quot; parent=\&quot;1\&quot; source=\&quot;7H3qwustJVtsp4QrSf4A-7\&quot; target=\&quot;7H3qwustJVtsp4QrSf4A-18\&quot;&gt;\n          &lt;mxGeometry relative=\&quot;1\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-7\&quot; value=\&quot;Instrumented app\&quot; style=\&quot;shape=image;html=1;verticalAlign=bottom;verticalLabelPosition=top;labelBackgroundColor=none;imageAspect=0;aspect=fixed;image=https://cdn1.iconfinder.com/data/icons/ionicons-fill-vol-2/512/logo-python-128.png;fontStyle=1;fontSize=13;labelPosition=center;align=center;\&quot; vertex=\&quot;1\&quot; parent=\&quot;1\&quot;&gt;\n          &lt;mxGeometry x=\&quot;300\&quot; y=\&quot;100\&quot; width=\&quot;120\&quot; height=\&quot;120\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-8\&quot; value=\&quot;\&quot; style=\&quot;shape=image;verticalLabelPosition=bottom;labelBackgroundColor=none;verticalAlign=top;aspect=fixed;imageAspect=0;image=data:image/svg+xml,PHN2ZyBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJ4TWlkWU1pZCIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIiB2aWV3Qm94PSIwIDAgMjU2LjAwMTAzNzU5NzY1NjI1IDI1NiIgaGVpZ2h0PSIyNTYiIHdpZHRoPSIyNTYuMDAxMDM3NTk3NjU2MjUiPiYjeGE7ICAgIDx0aXRsZT5PcGVuVGVsZW1ldHJ5PC90aXRsZT4mI3hhOyAgICA8Zz4mI3hhOyAgICAgICAgPHBhdGggZmlsbD0iI0Y1QTgwMCIgZD0iTTEzNS40NDAyMjYsMTM5LjkxNzg0NiBDMTI0LjUzMzg1NywxNTAuODIzMDY0IDEyNC41MzM4NTcsMTY4LjUwNTA5NiAxMzUuNDQwMjI2LDE3OS40MTAzMTUgQzE0Ni4zNDY1OTUsMTkwLjMxNTUzNCAxNjQuMDMwNDk0LDE5MC4zMTU1MzQgMTc0LjkzNjg2MywxNzkuNDEwMzE1IEMxODUuODQzMjMyLDE2OC41MDUwOTYgMTg1Ljg0MzIzMiwxNTAuODIzMDY0IDE3NC45MzY4NjMsMTM5LjkxNzg0NiBDMTY0LjAzMDQ5NCwxMjkuMDEyNjI3IDE0Ni4zNDY1OTUsMTI5LjAxMjYyNyAxMzUuNDQwMjI2LDEzOS45MTc4NDYgWiBNMTY0Ljk2NTMyNiwxNjkuNDY1Nzk0IEMxNTkuNTY0MDc2LDE3NC44NjY0NzQgMTUwLjgxMzAxMywxNzQuODY2NDc0IDE0NS40MTE3NjQsMTY5LjQ2NTc5NCBDMTQwLjAxMDUxNCwxNjQuMDY1MTE1IDE0MC4wMTA1MTQsMTU1LjMxNDk3NSAxNDUuNDExNzY0LDE0OS45MTQyOTYgQzE1MC44MTMwMTMsMTQ0LjUxMzYxNiAxNTkuNTY0MDc2LDE0NC41MTM2MTYgMTY0Ljk2NTMyNiwxNDkuOTE0Mjk2IEMxNzAuMzY2NTc1LDE1NS4yODkwMTEgMTcwLjM2NjU3NSwxNjQuMDY1MTE1IDE2NC45NjUzMjYsMTY5LjQ2NTc5NCBaIE0xNzQuNDY5NDQ3LDIuNTEyMDk0OTQgTDE1Ny4zNTY4MzUsMTkuNjIyOTAxOCBDMTU0LjAwNzAyMSwyMi45NzIzNjE3IDE1NC4wMDcwMjEsMjguNDc2OTAwNSAxNTcuMzU2ODM1LDMxLjgyNjM2MDQgTDIyNC4xNzEzMyw5OC42MzM4MDUxIEMyMjcuNTIxMTQzLDEwMS45ODMyNjUgMjMzLjAyNjI2MywxMDEuOTgzMjY1IDIzNi4zNzYwNzYsOTguNjMzODA1MSBMMjUzLjQ4ODY4OSw4MS41MjI5OTgyIEMyNTYuODM4NTAyLDc4LjE3MzUzODIgMjU2LjgzODUwMiw3Mi42Njg5OTk1IDI1My40ODg2ODksNjkuMzE5NTM5NiBMMTg2LjY0ODIyNiwyLjUxMjA5NDk0IEMxODMuMjk4NDEzLC0wLjgzNzM2NDk3OSAxNzcuODE5MjYxLC0wLjgzNzM2NDk3OSAxNzQuNDY5NDQ3LDIuNTEyMDk0OTQgTDE3NC40Njk0NDcsMi41MTIwOTQ5NCBaIE01NC41NzcyODksMjIxLjE2MTcyMyBDNTcuNjE1NDkxOSwyMTguMTIzODQgNTcuNjE1NDkxOSwyMTMuMTY0NTYyIDU0LjU3NzI4OSwyMTAuMTI2NjggTDQ1Ljg3ODE2MTMsMjAxLjQyODQ3IEM0Mi44Mzk5NTg0LDE5OC4zOTA1ODggMzcuODgwMTU3MiwxOTguMzkwNTg4IDM0Ljg0MTk1NDQsMjAxLjQyODQ3IEwxNi44NzI0MTI4LDIxOS4zOTYxMTYgTDE2Ljg0NjQ0NTIsMjE5LjQyMjA4IEwxMS45MTI2MTE2LDIxNC40ODg3NjggQzkuMTg2MDE5MjcsMjExLjc2MjQ2MiA0Ljc0NTU2ODk3LDIxMS43NjI0NjIgMi4wNDQ5NDQyMiwyMTQuNDg4NzY4IEMtMC42ODE2NDgwNzMsMjE3LjIxNTA3MiAtMC42ODE2NDgwNzMsMjIxLjY1NTA1MyAyLjA0NDk0NDIyLDIyNC4zNTUzOTMgTDMxLjY0Nzk0NjIsMjUzLjk1NTI3MiBDMzQuMzc0NTM4NSwyNTYuNjgxNTc2IDM4LjgxNDk4ODgsMjU2LjY4MTU3NiA0MS41MTU2MTM2LDI1My45NTUyNzIgQzQ0LjIxNjIzODMsMjUxLjIyODk2NyA0NC4yNDIyMDU5LDI0Ni43ODg5ODUgNDEuNTE1NjEzNiwyNDQuMDg4NjQ2IEwzNi41ODE3Nzk5LDIzOS4xNTUzMzMgTDM2LjYwNzc0NzUsMjM5LjEyOTM2NyBMNTQuNTc3Mjg5LDIyMS4xNjE3MjMgWiIvPiYjeGE7ICAgICAgICA8cGF0aCBmaWxsPSIjNDI1Q0M3IiBkPSJNMTQ1LjEwMDE1Myw1MS42Mzc1MDcgTDEwNy4wODM2NjYsODkuNjQ5OTgyMyBDMTAzLjcwNzg4NSw5My4wMjU0MDcgMTAzLjcwNzg4NSw5OC41ODE4NzU0IDEwNy4wODM2NjYsMTAxLjk1NzMgTDEzMC41NTgzMjgsMTI1LjQyOTQ4NCBDMTQ3LjE1MTU4OSwxMTMuNDg1Njc0IDE3MC40MTg1MSwxMTQuOTY1NjY4IDE4NS4zNDk4NDksMTI5Ljg5NTQzMSBMMjA0LjM1ODA5MiwxMTAuODg5MTk0IEMyMDcuNzMzODczLDEwNy41MTM3NjkgMjA3LjczMzg3MywxMDEuOTU3MyAyMDQuMzU4MDkyLDk4LjU4MTg3NTQgTDE1Ny40MDg3Nyw1MS42Mzc1MDcgQzE1NC4wMzI5ODksNDguMjM2MTE3NSAxNDguNDc1OTM0LDQ4LjIzNjExNzUgMTQ1LjEwMDE1Myw1MS42Mzc1MDcgWiBNMTIwLjY5MDY2LDEzNS4zMjIwNzUgTDEwNi44MjM5OTEsMTIxLjQ1Njg3IEMxMDMuNTc4MDQ4LDExOC4yMTEyNjggOTguMjU0NzAwOCwxMTguMjExMjY4IDk1LjAwODc1NzYsMTIxLjQ1Njg3IEw0Ni4xMTE4NjkyLDE3MC4zNzQ1NjMgQzQyLjg2NTkyNiwxNzMuNjIwMTY0IDQyLjg2NTkyNiwxNzguOTQyOTQ5IDQ2LjExMTg2OTIsMTgyLjE4ODU0OSBMNzMuODE5MjQwNCwyMDkuODkyOTk3IEM3Ny4wNjUxODM2LDIxMy4xMzg1OTcgODIuMzg4NTMwNCwyMTMuMTM4NTk3IDg1LjYzNDQ3MzYsMjA5Ljg5Mjk5NyBMMTE3LjA4MTE3MSwxNzguMzk3Njg3IEMxMTAuNDMzNDgsMTY0LjY2MjMwNiAxMTEuNjI3OTg3LDE0OC4wNzA3OTUgMTIwLjY5MDY2LDEzNS4zMjIwNzUgWiIvPiYjeGE7ICAgIDwvZz4mI3hhOzwvc3ZnPg==;fontStyle=1;fontSize=13;\&quot; vertex=\&quot;1\&quot; parent=\&quot;1\&quot;&gt;\n          &lt;mxGeometry x=\&quot;390\&quot; y=\&quot;100\&quot; width=\&quot;70\&quot; height=\&quot;70\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-32\&quot; value=\&quot;Query\&quot; style=\&quot;edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;exitX=0.5;exitY=1;exitDx=0;exitDy=0;entryX=0.5;entryY=0;entryDx=0;entryDy=0;fontStyle=1;fontSize=13;labelBackgroundColor=none;horizontal=0;verticalAlign=bottom;strokeWidth=4;endArrow=block;endFill=1;\&quot; edge=\&quot;1\&quot; parent=\&quot;1\&quot; source=\&quot;7H3qwustJVtsp4QrSf4A-26\&quot; target=\&quot;7H3qwustJVtsp4QrSf4A-2\&quot;&gt;\n          &lt;mxGeometry relative=\&quot;1\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-28\&quot; value=\&quot;Logs\&quot; style=\&quot;edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;exitX=0.25;exitY=1;exitDx=0;exitDy=0;entryX=0.25;entryY=0;entryDx=0;entryDy=0;fontStyle=1;fontSize=13;labelBackgroundColor=none;horizontal=0;verticalAlign=bottom;strokeWidth=4;endArrow=block;endFill=1;\&quot; edge=\&quot;1\&quot; parent=\&quot;1\&quot; source=\&quot;7H3qwustJVtsp4QrSf4A-18\&quot; target=\&quot;7H3qwustJVtsp4QrSf4A-26\&quot;&gt;\n          &lt;mxGeometry relative=\&quot;1\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-29\&quot; value=\&quot;Traces\&quot; style=\&quot;edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;exitX=0.75;exitY=1;exitDx=0;exitDy=0;fontStyle=1;fontSize=13;labelBackgroundColor=none;horizontal=0;verticalAlign=bottom;strokeWidth=4;endArrow=block;endFill=1;entryX=0.75;entryY=0;entryDx=0;entryDy=0;\&quot; edge=\&quot;1\&quot; parent=\&quot;1\&quot; source=\&quot;7H3qwustJVtsp4QrSf4A-18\&quot; target=\&quot;7H3qwustJVtsp4QrSf4A-26\&quot;&gt;\n          &lt;mxGeometry relative=\&quot;1\&quot; as=\&quot;geometry\&quot;&gt;\n            &lt;mxPoint x=\&quot;460\&quot; y=\&quot;610\&quot; as=\&quot;targetPoint\&quot; /&gt;\n          &lt;/mxGeometry&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-1\&quot; value=\&quot;Alloy (OTEL collector)\&quot; style=\&quot;shape=image;verticalLabelPosition=bottom;labelBackgroundColor=none;verticalAlign=top;aspect=fixed;imageAspect=0;image=https://grafana.com/media/oss/alloy/alloy-logo.svg;fontStyle=1;fontSize=13;\&quot; vertex=\&quot;1\&quot; parent=\&quot;1\&quot;&gt;\n          &lt;mxGeometry x=\&quot;202.29999999999998\&quot; y=\&quot;360\&quot; width=\&quot;120\&quot; height=\&quot;120\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-3\&quot; value=\&quot;Tempo (trace storage)\&quot; style=\&quot;shape=image;verticalLabelPosition=bottom;labelBackgroundColor=none;verticalAlign=top;aspect=fixed;imageAspect=0;image=https://raw.githubusercontent.com/grafana/grafana/a11ef646e4ead03f66009b8dcfd443e9d2a2263a/public/app/plugins/datasource/tempo/img/tempo_logo.svg;fontStyle=1;fontSize=13;\&quot; vertex=\&quot;1\&quot; parent=\&quot;1\&quot;&gt;\n          &lt;mxGeometry x=\&quot;400\&quot; y=\&quot;640.45\&quot; width=\&quot;120\&quot; height=\&quot;120\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-4\&quot; value=\&quot;Loki (log storage)\&quot; style=\&quot;shape=image;verticalLabelPosition=bottom;labelBackgroundColor=none;verticalAlign=top;aspect=fixed;imageAspect=0;image=https://raw.githubusercontent.com/grafana/grafana/a11ef646e4ead03f66009b8dcfd443e9d2a2263a/public/app/plugins/datasource/loki/img/loki_icon.svg;fontStyle=1;fontSize=13;\&quot; vertex=\&quot;1\&quot; parent=\&quot;1\&quot;&gt;\n          &lt;mxGeometry x=\&quot;210\&quot; y=\&quot;640\&quot; width=\&quot;100\&quot; height=\&quot;120.45\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n        &lt;mxCell id=\&quot;7H3qwustJVtsp4QrSf4A-2\&quot; value=\&quot;Grafana (visualize)\&quot; style=\&quot;shape=image;verticalLabelPosition=bottom;labelBackgroundColor=none;verticalAlign=top;aspect=fixed;imageAspect=0;image=https://raw.githubusercontent.com/grafana/grafana/a11ef646e4ead03f66009b8dcfd443e9d2a2263a/public/img/grafana_icon.svg;fontStyle=1;fontSize=13;\&quot; vertex=\&quot;1\&quot; parent=\&quot;1\&quot;&gt;\n          &lt;mxGeometry x=\&quot;302.3\&quot; y=\&quot;880\&quot; width=\&quot;115.4\&quot; height=\&quot;120\&quot; as=\&quot;geometry\&quot; /&gt;\n        &lt;/mxCell&gt;\n      &lt;/root&gt;\n    &lt;/mxGraphModel&gt;\n  &lt;/diagram&gt;\n&lt;/mxfile&gt;\n&quot;}"></div>
+<script type="text/javascript" src="https://viewer.diagrams.net/js/viewer-static.min.js"></script>
+</body>
+</html>
