@@ -1,4 +1,14 @@
-### feat(Compose): Add an example dashboard for HTTP access statistics (HEAD -> feat/observability)
+### doc(Compose): Add documentation to help using and understanding compose configuration (HEAD -> feat/observability)
+>Thu, 6 Jun 2024 15:32:01 +0200
+
+>Author: Alexis Manin (alexis.manin@geomatys.com)
+
+>Commiter: Alexis Manin (alexis.manin@geomatys.com)
+
+
+
+
+### feat(Compose): Add an example dashboard for HTTP access statistics
 >Thu, 6 Jun 2024 11:28:43 +0200
 
 >Author: Alexis Manin (alexis.manin@geomatys.com)
@@ -18,7 +28,7 @@
 
 
 
-### feat(Compose): Add observability stack (origin/feat/observability)
+### feat(Compose): Add observability stack
 >Tue, 4 Jun 2024 18:31:27 +0200
 
 >Author: Alexis Manin (alexis.manin@geomatys.com)
